<?xml version="1.0" encoding="utf-8"?>
<com.example.thelibrary.views.viewpod.LibraryWithFilterAndLayoutViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_xxlarge">

    <androidx.appcompat.widget.AppCompatImageView
        android:visibility="gone"
        android:id="@+id/btnClearFilter"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:background="@drawable/background_category"
        android:src="@drawable/ic_baseline_close_black_24p"
        android:scaleType="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_toEndOf="@+id/btnClearFilter"
        android:clipToPadding="false"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingEnd="@dimen/margin_medium_2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chipGroup"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:drawableStart="@drawable/ic_baseline_sort_grey_24dp"
        android:drawablePadding="@dimen/margin_card_medium"
        android:text="Sort by: Recent"
        android:textSize="@dimen/text_regular_2x" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chipGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:drawableEnd="@drawable/ic_baseline_grid_on_24"
        android:drawablePadding="@dimen/margin_card_medium"
        android:text="View: Grid" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLibraryEbooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSortBy"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium_2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLibraryEbooksTwoColumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSortBy"
        android:layout_marginStart="@dimen/margin_medium_2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLibraryEbooksThreeColumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSortBy"
        android:layout_marginStart="@dimen/margin_medium_2" />

</com.example.thelibrary.views.viewpod.LibraryWithFilterAndLayoutViewPod>