<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?attr/bottomSheetStyle"
    android:background="@color/white"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSortByBottomSheet"
        style="@style/Widget.Material3.Toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:text="Sort By"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/rgSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSortByBottomSheet">

        <RadioButton
            android:id="@+id/rbRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="Recent" />

        <RadioButton
            android:id="@+id/rbTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="Title" />

        <RadioButton
            android:id="@+id/rbAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="Author" />
    </RadioGroup>

</RelativeLayout>