<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/action_library"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/lbl_library">

    </item>
</menu>
