<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?attr/bottomSheetStyle"
    android:background="@color/white"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvViewAs"
        style="@style/Widget.Material3.Toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:text="View As"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/rgLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvViewAs">

        <RadioButton
            android:id="@+id/rbList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="List" />

        <RadioButton
            android:id="@+id/rbLargeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="Large Grid" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbSmallGrid"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="Small Grid" />
    </RadioGroup>

</RelativeLayout>